# libgestures

./: .gitignore  Android.mk  CMakeLists.txt
jni/: Android.mk  jniapi.cpp  jniapi.h
res/layout/: activity_main.xml
samples/: Android.mk
samples/GesturesSampleAndroid/: .gitignore  Android.mk  AndroidManifest.xml  proguard.flags
samples/GesturesSampleAndroid/jni/: Android.mk  jniapi.cpp  jniapi.h  logger.h
samples/GesturesSampleAndroid/res/values/: strings.xml
samples/GesturesSampleAndroid/src/org/indt/gesturessample/: MainActivity.java  SurfaceViewRect.java
src/: Android.mk  CMakeLists.txt  NIXEvents.h  gesture.cpp  gesture.h  gesturemanager.cpp  gesturemanager.h  gesturemanager_p.h  gesturerecognizer.cpp  gesturerecognizer.h
src/events/: ainputeventhelper.cpp  ainputeventhelper.h  gestureeventfilter.cpp  gestureeventfilter_p.h  gesturetouchevent.h
src/gestures/: doubletap.cpp  doubletap.h  doubletap_p.h  longpress.cpp  longpress.h  longpress_p.h  pan.cpp  pan.h  pan_p.h  pinch.cpp  pinch.h  pinch3f.cpp  pinch3f.h  pinch3f_p.h  pinch_p.h  swipe.cpp  swipe.h  swipe_p.h  tap.cpp  tap.h
src/org/indt/gesturessample/: MainActivity.java  SurfaceViewRect.java
src/utils/: scalar.h  vector2d.cpp  vector2d.h
